Adding mapStruct to search services