@@ -1,7 +1,8 @@
 package com.xhdh.xhdh.application.services;
 
-import com.xhdh.xhdh.application.dto.searches.TagResponse;
-import com.xhdh.xhdh.domain.models.University;
+import com.xhdh.xhdh.application.dto.search.TagResponse;
+import com.xhdh.xhdh.application.mappers.search.TagMapper;
+import com.xhdh.xhdh.domain.models.search.University;
 import com.xhdh.xhdh.infrastructure.repositories.jpa.TagRepository;
 import com.xhdh.xhdh.infrastructure.repositories.jpa.UniversityRepository;
 
@@ -9,12 +10,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TagService {
     private final TagRepository tagRepository;
+
+    private final TagMapper tagMapper;
 
     private final UniversityRepository universityRepository;
 
@@ -22,17 +24,17 @@ public class TagService {
         return tagRepository.findAll()
                 .stream()
                 .map(tag -> {
-                    TagResponse tagResponse = new TagResponse(tag);
-                    tagResponse.setUniversityNames(showAllUniversitiesByTagName(tag.getName()));
+                    TagResponse tagResponse = tagMapper.toTagResponse(tag);
+                    tagResponse.setUniversities(showAllUniversitiesByTagName(tag.getName()));
                     return tagResponse;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> showAllUniversitiesByTagName(String tagName) {
         return universityRepository.findAllByTagName(tagName)
                 .stream()
                 .map(University::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
